# domain-hunter

./: Cargo.toml  README.md  extensions.json  wishlist.json
src/: commands.rs  database.rs  default_extensions.rs  domains_table.rs  extensions.rs  extensions_command.rs  extensions_file.rs  extensions_table.rs  extensions_ui.rs  favorites.rs  files.rs  main.rs  models.rs  search.rs  search_command.rs  search_ui.rs  tables.rs  wishlist.rs  wishlist_command.rs  wishlist_file.rs
src/commands/: extensions_command.rs  init_command.rs  search_command.rs  wishlist_command.rs
src/database/: connection.rs  extensions_api.rs  migrations.rs  wishlist_api.rs
src/files/: extensions_file.rs
src/tables/: base_table.rs  domains_table.rs  extensions_table.rs
