[package]
name = "domain-hunter"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
tokio = { version = "1", features = ["full"] }
strum = "0.26.3"
clap = { version = "4.5.23", features = ["derive"] }
reqwest = "0.12.11"
regex = "1.11.1"
serde_json = "1.0.134"
serde = { version = "1.0.217", features = ["derive"] }
itertools = "0.13.0"
unicode-width = "0.2.0"
fakeit = "1.3.0"
